[gd_scene load_steps=100 format=3 uid="uid://t00spyboxk4x"]

[ext_resource type="Texture2D" uid="uid://cs72k1ilb0c6b" path="res://scenes/entities/archer/art/Archer-Attack01.png" id="1_4cc7i"]
[ext_resource type="Script" uid="uid://c1a13fws3b27j" path="res://scenes/entities/archer/archer.gd" id="1_xyvlq"]
[ext_resource type="Texture2D" uid="uid://boo25jm02pr7o" path="res://scenes/entities/archer/art/Archer-Shadow.png" id="1_yyjpj"]
[ext_resource type="Texture2D" uid="uid://dcd4khix0gn4v" path="res://scenes/entities/archer/art/Archer-Attack02.png" id="2_5421n"]
[ext_resource type="Texture2D" uid="uid://d0wdq65i3jeo7" path="res://scenes/entities/archer/art/Archer-Shadow_death.png" id="2_brqxx"]
[ext_resource type="PackedScene" uid="uid://yxsd0m7ijqbd" path="res://scenes/entities/archer/arrow/arrow.tscn" id="2_fgy34"]
[ext_resource type="Script" uid="uid://8q73873xik7s" path="res://addons/pandora/model/entity.gd" id="2_spxme"]
[ext_resource type="Texture2D" uid="uid://ckafngicjjvev" path="res://scenes/entities/archer/art/Archer-Idle.png" id="3_382hc"]
[ext_resource type="Texture2D" uid="uid://cv38vagl1q8so" path="res://scenes/entities/archer/art/Archer-Hurt.png" id="3_vqkpj"]
[ext_resource type="PackedScene" uid="uid://d3nnbj7awuje0" path="res://scenes/entities/archer/charged_arrow/chargedArrow.tscn" id="3_x7scg"]
[ext_resource type="Texture2D" uid="uid://d2gyjrpj2leqp" path="res://scenes/entities/archer/art/Archer-Attack01_Effect.png" id="4_xynes"]
[ext_resource type="Texture2D" uid="uid://c4586fiqxq67k" path="res://scenes/entities/archer/art/Archer-Attack02_Effect.png" id="5_65drc"]
[ext_resource type="Texture2D" uid="uid://dliuhgjdhr8fd" path="res://scenes/entities/archer/art/Archer-Death.png" id="6_7xe13"]
[ext_resource type="Texture2D" uid="uid://bovci8alueeyr" path="res://scenes/entities/archer/art/Archer-Walk.png" id="8_gjfdg"]
[ext_resource type="Script" uid="uid://7agipnb73jsa" path="res://addons/godot_state_charts/state_chart.gd" id="12_qjxif"]
[ext_resource type="Script" uid="uid://5agk02xspk7j" path="res://addons/godot_state_charts/compound_state.gd" id="13_dpcv0"]
[ext_resource type="Script" uid="uid://bmsajtbxc0ila" path="res://addons/godot_state_charts/atomic_state.gd" id="14_pcwr5"]
[ext_resource type="Script" uid="uid://c4gb71tfig047" path="res://addons/godot_state_charts/transition.gd" id="15_d0fbi"]
[ext_resource type="Script" uid="uid://drqwl4h286u12" path="res://components/enemy_health_component.gd" id="16_r0avq"]
[ext_resource type="Script" uid="uid://babmo0lj6opev" path="res://components/enemy_hurt_box_component.gd" id="18_1wv74"]
[ext_resource type="Script" uid="uid://bmrbjkfagaclo" path="res://components/archer/archer_animation.gd" id="20_ojfub"]
[ext_resource type="Script" uid="uid://bh4w2n4mc313o" path="res://components/archer/archer_skill.gd" id="21_iss7m"]
[ext_resource type="PackedScene" uid="uid://cw86ntwlxqf3f" path="res://scenes/entities/player/ghost.tscn" id="22_pc1md"]
[ext_resource type="Script" uid="uid://2jnhi2k34bt2" path="res://components/archer/archer_state.gd" id="22_spxme"]

[sub_resource type="Resource" id="Resource_pc1md"]
script = ExtResource("2_spxme")
_id = "32"

[sub_resource type="AtlasTexture" id="AtlasTexture_735hh"]
atlas = ExtResource("1_yyjpj")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnlak"]
atlas = ExtResource("2_brqxx")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrqhq"]
atlas = ExtResource("2_brqxx")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f51lw"]
atlas = ExtResource("2_brqxx")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x03nr"]
atlas = ExtResource("2_brqxx")
region = Rect2(300, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_ou8d2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_735hh")
}],
"loop": true,
"name": &"shadow",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnlak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrqhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f51lw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x03nr")
}],
"loop": false,
"name": &"shadow_death",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_r630s"]
atlas = ExtResource("4_xynes")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb057"]
atlas = ExtResource("4_xynes")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_84k67"]
atlas = ExtResource("4_xynes")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_e520h"]
atlas = ExtResource("4_xynes")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sa1lo"]
atlas = ExtResource("4_xynes")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_avf75"]
atlas = ExtResource("4_xynes")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa37j"]
atlas = ExtResource("4_xynes")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h3b4"]
atlas = ExtResource("4_xynes")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee4qc"]
atlas = ExtResource("4_xynes")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yeml8"]
atlas = ExtResource("5_65drc")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wysjr"]
atlas = ExtResource("5_65drc")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u60n3"]
atlas = ExtResource("5_65drc")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrjxt"]
atlas = ExtResource("5_65drc")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_iikvn"]
atlas = ExtResource("5_65drc")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivqob"]
atlas = ExtResource("5_65drc")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0gox"]
atlas = ExtResource("5_65drc")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg2a6"]
atlas = ExtResource("5_65drc")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1aox"]
atlas = ExtResource("5_65drc")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_voml3"]
atlas = ExtResource("5_65drc")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qh5pw"]
atlas = ExtResource("5_65drc")
region = Rect2(1000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n12ui"]
atlas = ExtResource("5_65drc")
region = Rect2(1100, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_dapvi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r630s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xb057")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84k67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e520h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sa1lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avf75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa37j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h3b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee4qc")
}],
"loop": false,
"name": &"attack1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yeml8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wysjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u60n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrjxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iikvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivqob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0gox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg2a6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1aox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_voml3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qh5pw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n12ui")
}],
"loop": false,
"name": &"attack2",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_g5nin"]
atlas = ExtResource("3_vqkpj")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8plk"]
atlas = ExtResource("3_vqkpj")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_72bf5"]
atlas = ExtResource("3_vqkpj")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvfxg"]
atlas = ExtResource("3_vqkpj")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v4dg"]
atlas = ExtResource("1_4cc7i")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_on0g3"]
atlas = ExtResource("1_4cc7i")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv3j8"]
atlas = ExtResource("1_4cc7i")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6bcb"]
atlas = ExtResource("1_4cc7i")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjc5y"]
atlas = ExtResource("1_4cc7i")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6rfm"]
atlas = ExtResource("1_4cc7i")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxt5v"]
atlas = ExtResource("1_4cc7i")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1mk0"]
atlas = ExtResource("1_4cc7i")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuni8"]
atlas = ExtResource("1_4cc7i")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwlc3"]
atlas = ExtResource("2_5421n")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_715dv"]
atlas = ExtResource("2_5421n")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cu20"]
atlas = ExtResource("2_5421n")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_81x1w"]
atlas = ExtResource("2_5421n")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4wm5"]
atlas = ExtResource("2_5421n")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bboe"]
atlas = ExtResource("2_5421n")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_80gd1"]
atlas = ExtResource("2_5421n")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlxwi"]
atlas = ExtResource("2_5421n")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bcn2"]
atlas = ExtResource("2_5421n")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4emv"]
atlas = ExtResource("2_5421n")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6gpx"]
atlas = ExtResource("2_5421n")
region = Rect2(1000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vfjx"]
atlas = ExtResource("2_5421n")
region = Rect2(1100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_imljv"]
atlas = ExtResource("6_7xe13")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h72dx"]
atlas = ExtResource("6_7xe13")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p13gh"]
atlas = ExtResource("6_7xe13")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dyn2"]
atlas = ExtResource("6_7xe13")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5416k"]
atlas = ExtResource("3_382hc")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3751"]
atlas = ExtResource("3_382hc")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq0kb"]
atlas = ExtResource("3_382hc")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m5jh"]
atlas = ExtResource("3_382hc")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yn413"]
atlas = ExtResource("3_382hc")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1fgp"]
atlas = ExtResource("3_382hc")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6u3c"]
atlas = ExtResource("8_gjfdg")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntbeq"]
atlas = ExtResource("8_gjfdg")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vu8s"]
atlas = ExtResource("8_gjfdg")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y85kl"]
atlas = ExtResource("8_gjfdg")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pbhe"]
atlas = ExtResource("8_gjfdg")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_81xer"]
atlas = ExtResource("8_gjfdg")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr7c2"]
atlas = ExtResource("8_gjfdg")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_67y5w"]
atlas = ExtResource("8_gjfdg")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_8wyk5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5nin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8plk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72bf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvfxg")
}],
"loop": false,
"name": &"Hurt",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v4dg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_on0g3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv3j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6bcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjc5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6rfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxt5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1mk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuni8")
}],
"loop": false,
"name": &"attack1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwlc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_715dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cu20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81x1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4wm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bboe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80gd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlxwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bcn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4emv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6gpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vfjx")
}],
"loop": false,
"name": &"attack2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_imljv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h72dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p13gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dyn2")
}],
"loop": false,
"name": &"die",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5416k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3751")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq0kb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m5jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yn413")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1fgp")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6u3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntbeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vu8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y85kl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pbhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81xer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr7c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67y5w")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_76ldj"]
size = Vector2(11.75, 3.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xsg4r"]
size = Vector2(12, 17.25)

[node name="Archer" type="CharacterBody2D"]
z_index = 30
y_sort_enabled = true
scale = Vector2(4, 4)
collision_layer = 3
collision_mask = 0
script = ExtResource("1_xyvlq")
stats = SubResource("Resource_pc1md")

[node name="body" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="shadow" type="AnimatedSprite2D" parent="body"]
sprite_frames = SubResource("SpriteFrames_ou8d2")
animation = &"shadow"

[node name="effect" type="AnimatedSprite2D" parent="body"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_dapvi")
animation = &"attack2"
frame = 11
frame_progress = 1.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="body"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_8wyk5")
animation = &"attack1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.125, 5.375)
shape = SubResource("RectangleShape2D_76ldj")

[node name="StateChart" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("12_qjxif")

[node name="root" type="Node" parent="StateChart"]
script = ExtResource("13_dpcv0")
initial_state = NodePath("walk")

[node name="walk" type="Node" parent="StateChart/root"]
unique_name_in_owner = true
script = ExtResource("14_pcwr5")

[node name="to_die" type="Node" parent="StateChart/root/walk"]
script = ExtResource("15_d0fbi")
to = NodePath("../../die")
event = &"to_die"
delay_in_seconds = "0.0"

[node name="to_attack" type="Node" parent="StateChart/root/walk"]
script = ExtResource("15_d0fbi")
to = NodePath("../../attack")
event = &"to_attack"
delay_in_seconds = "0.0"

[node name="to_run_away" type="Node" parent="StateChart/root/walk"]
script = ExtResource("15_d0fbi")
to = NodePath("../../runAway")
event = &"to_run_away"
delay_in_seconds = "0.0"

[node name="to_hit" type="Node" parent="StateChart/root/walk"]
script = ExtResource("15_d0fbi")
to = NodePath("../../hit")
event = &"to_hit"
delay_in_seconds = "0.0"

[node name="to_rage" type="Node" parent="StateChart/root/walk"]
script = ExtResource("15_d0fbi")
to = NodePath("../../Rage")
event = &"to_rage"
delay_in_seconds = "0.0"

[node name="die" type="Node" parent="StateChart/root"]
unique_name_in_owner = true
script = ExtResource("14_pcwr5")

[node name="attack" type="Node" parent="StateChart/root"]
unique_name_in_owner = true
script = ExtResource("14_pcwr5")

[node name="to_die" type="Node" parent="StateChart/root/attack"]
script = ExtResource("15_d0fbi")
to = NodePath("../../die")
event = &"to_die"
delay_in_seconds = "0.0"

[node name="to_walk" type="Node" parent="StateChart/root/attack"]
script = ExtResource("15_d0fbi")
to = NodePath("../../walk")
event = &"to_walk"
delay_in_seconds = "0.0"

[node name="to_run_away" type="Node" parent="StateChart/root/attack"]
script = ExtResource("15_d0fbi")
to = NodePath("../../runAway")
event = &"to_run_away"
delay_in_seconds = "0.0"

[node name="to_hit" type="Node" parent="StateChart/root/attack"]
script = ExtResource("15_d0fbi")
to = NodePath("../../hit")
event = &"to_hit"
delay_in_seconds = "0.0"

[node name="to_rage" type="Node" parent="StateChart/root/attack"]
script = ExtResource("15_d0fbi")
to = NodePath("../../Rage")
event = &"to_rage"
delay_in_seconds = "0.0"

[node name="runAway" type="Node" parent="StateChart/root"]
unique_name_in_owner = true
script = ExtResource("14_pcwr5")

[node name="to_die" type="Node" parent="StateChart/root/runAway"]
script = ExtResource("15_d0fbi")
to = NodePath("../../die")
event = &"to_die"
delay_in_seconds = "0.0"

[node name="to_walk" type="Node" parent="StateChart/root/runAway"]
script = ExtResource("15_d0fbi")
to = NodePath("../../walk")
event = &"to_walk"
delay_in_seconds = "0.0"

[node name="to_attack" type="Node" parent="StateChart/root/runAway"]
script = ExtResource("15_d0fbi")
to = NodePath("../../attack")
event = &"to_attack"
delay_in_seconds = "0.0"

[node name="to_hit" type="Node" parent="StateChart/root/runAway"]
script = ExtResource("15_d0fbi")
to = NodePath("../../hit")
event = &"to_hit"
delay_in_seconds = "0.0"

[node name="hit" type="Node" parent="StateChart/root"]
unique_name_in_owner = true
script = ExtResource("14_pcwr5")

[node name="to_die" type="Node" parent="StateChart/root/hit"]
script = ExtResource("15_d0fbi")
to = NodePath("../../die")
event = &"to_die"
delay_in_seconds = "0.0"

[node name="to_walk" type="Node" parent="StateChart/root/hit"]
script = ExtResource("15_d0fbi")
to = NodePath("../../walk")
event = &"to_walk"
delay_in_seconds = "0.0"

[node name="to_attack" type="Node" parent="StateChart/root/hit"]
script = ExtResource("15_d0fbi")
to = NodePath("../../attack")
event = &"to_attack"
delay_in_seconds = "0.0"

[node name="to_run_away" type="Node" parent="StateChart/root/hit"]
script = ExtResource("15_d0fbi")
to = NodePath("../../runAway")
event = &"to_run_away"
delay_in_seconds = "0.0"

[node name="Rage" type="Node" parent="StateChart/root"]
unique_name_in_owner = true
script = ExtResource("14_pcwr5")

[node name="to_die" type="Node" parent="StateChart/root/Rage"]
script = ExtResource("15_d0fbi")
to = NodePath("../../die")
event = &"to_die"
delay_in_seconds = "0.0"

[node name="to_walk" type="Node" parent="StateChart/root/Rage"]
script = ExtResource("15_d0fbi")
to = NodePath("../../walk")
event = &"to_walk"
delay_in_seconds = "0.0"

[node name="EnemyHealthComponent" type="Node2D" parent="." node_paths=PackedStringArray("archer")]
unique_name_in_owner = true
script = ExtResource("16_r0avq")
archer = NodePath("..")

[node name="EnemyHurtBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("healthComponent")]
position = Vector2(0, -0.5)
collision_layer = 16
collision_mask = 0
script = ExtResource("18_1wv74")
healthComponent = NodePath("../EnemyHealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtBoxComponent"]
position = Vector2(0, 0.875)
shape = SubResource("RectangleShape2D_xsg4r")

[node name="ArcherAnimations" type="Node" parent="." node_paths=PackedStringArray("enemy")]
unique_name_in_owner = true
script = ExtResource("20_ojfub")
enemy = NodePath("..")

[node name="ArcherSkill" type="Node" parent="." node_paths=PackedStringArray("archer")]
unique_name_in_owner = true
script = ExtResource("21_iss7m")
archer = NodePath("..")
ghost_node = ExtResource("22_pc1md")
charged_arrow_scene = ExtResource("3_x7scg")

[node name="ArcherState" type="Node" parent="." node_paths=PackedStringArray("archer")]
unique_name_in_owner = true
script = ExtResource("22_spxme")
archer = NodePath("..")
arrow_scene = ExtResource("2_fgy34")

[connection signal="state_entered" from="StateChart/root/walk" to="." method="_on_walk_state_entered"]
[connection signal="state_processing" from="StateChart/root/walk" to="." method="_on_walk_state_processing"]
[connection signal="state_entered" from="StateChart/root/attack" to="." method="_on_attack_state_entered"]
[connection signal="state_processing" from="StateChart/root/attack" to="." method="_on_attack_state_processing"]
[connection signal="state_entered" from="StateChart/root/Rage" to="." method="_on_rage_state_entered"]
[connection signal="state_processing" from="StateChart/root/Rage" to="." method="_on_rage_state_processing"]
[connection signal="body_entered" from="EnemyHurtBoxComponent" to="EnemyHurtBoxComponent" method="_on_body_entered"]
